force-app/main/default/objects/RenewalReminderMilestones__c/fields/Process_From__c.field-meta.xml
<CustomField>
    <fullName>Process_From__c</fullName>
    <label>Process From</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Current Quarter</fullName>
            </value>
            <value>
                <fullName>Current Month</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>