force-app/main/default/objects/RenewalReminderMilestones__c/fields/Process_Value__c.field-meta.xml
<CustomField>
    <fullName>Process_Value__c</fullName>
    <label>Process Value</label>
    <length>100</length>
    <type>Text</type>
</CustomField>