force-app/main/default/objects/RenewalReminderMilestones__c/fields/Window_Sub_Type__c.field-meta.xml
<CustomField>
    <fullName>Window_Sub_Type__c</fullName>
    <label>Window Sub Type</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Start Date</fullName>
            </value>
            <value>
                <fullName>Close Date</fullName>
            </value>
            <value>
                <fullName>Reminder</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>