force-app/main/default/objects/RenewalReminderMilestones__c/listViews/All.listView-meta.xml
<ListView>
    <fullName>All</fullName>
    <columns>NAME</columns>
    <columns>Renewal_Reminder_Policy__c</columns>
    <columns>Window_Type__c</columns>
    <columns>Window_Sub_Type__c</columns>
    <columns>Process_From__c</columns>
    <columns>Process_Value__c</columns>
    <filterScope>Everything</filterScope>
    <label>All</label>
</ListView>